--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   </head>
   <body id="home">
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg  fixed-top">
+    <nav class="navbar bg-body-dark  navbar-expand-lg  fixed-top">
       <div class="container">
-        <a class="navbar-brand fw-semibold text-white" href="#">BookSpace</a>
+        <a class="navbar-brand fw-semibold text-white" href="#">BookSpace </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -55,7 +55,7 @@
     <section id="home">
       <div class="container">
           <div class="row  pt-3 mt-3">
-            <div class="col-md-6 " data-aos="fade-left" data-aos-duration="2000">
+            <div class="col-md-6  " data-aos="fade-left" data-aos-duration="2000">
                 <h3 class="fs-1 mt-5 lead"></h3>
               <p class="fs-4 mt-4 ">Buku di Mana Saja, Pengetahuan untuk Semua
               Temukan Ribuan Buku, Artikel, dan Referensi Online dengan Mudah dan Cepat!
@@ -63,9 +63,9 @@
               <a class="btn btn-primary" href="#about" id="#about">Klik Disini</a>
               </div>
     
-              <div class="col-md-6  mb-5 pb-5 "  data-aos="fade-right" data-aos-duration="2000">
+              <div class="col-md-4  mb-5 "  data-aos="fade-right" data-aos-duration="2000">
                 <div class="box">
-                  <img src="img/1-removebg-preview.png" class="   position-relative top-50  start-50 translate-middle-x  "  alt="faizikhsan">
+                  <img src="img/2-removebg-preview.png" class="position-relative start-100 translate-middle-x rounded-3"  alt="faizikhsan">
                 </div>
         </div>
       </div>
@@ -198,18 +198,114 @@
         </div>
 
         <div class="project row justify-content-center pt-4 pb-2">
-          <div class="col-md col-lg-2 mb-3">
-            <div class="card" data-aos="flip-left" data-aos-duration="500">
-                <img src="img/202410300320-1730258478-(EDIT)THE STORY OF DAJJAL.jpg" alt="">
+          <div class="col-md col-lg-2 mb-3 ">
+            <div class="card rounded-3" data-aos="flip-left" data-aos-duration="500">
+                <img src="img/202410300320-1730258478-(EDIT)THE STORY OF DAJJAL.jpg" class="rounded-3" alt="">
                 <div class="card-body">
                   <div class="box-buku">
-                    <div class="text p-1">
-                      The Story of Dajjal Mengungkap Tanda-tanda Kemunculan Dajjal dan Rahasia Selamat dari Fitnah Terbesar Akhir Zaman
+                    <div class="text p-1">                     
+                      The Story of Dajjal Mengungkap Tanda-tanda Kemunculan Dajjal   The Story of Dajjal Mengungkap Tanda-tanda Kemunculan Dajjal                     
                     </div>
                 </div>
                 <div class="isi-buku">
                     <label class="card-text d-block">Rp.94.500</label>
                     <label class="card-text d-block">Airlangga</label>
+                  </div>
+                </div>
+            </div>
+        </div>
+          <div class="col-md col-lg-2 mb-3">
+            <div class="card rounded-3" data-aos="flip-left" data-aos-duration="500">
+                <img src="img/202411010208-1730426917-new LAKSAMANA CHENG HO - ARASKA 2020.jpg" class="rounded-3" alt="">
+                <div class="card-body">
+                  <div class="box-buku">
+                    <div class="text p-1">                     
+                      Laksamana Cheng Ho : Panglima Muslim Tionghoa Penakluk Dunia
+                    </div>
+                </div>
+                <div class="isi-buku">
+                    <label class="card-text d-block">Rp 87.000</label>
+                    <label class="card-text d-block">Araska Publisher</label>
+                  </div>
+                </div>
+            </div>
+        </div>
+          <div class="col-md col-lg-2 mb-3">
+            <div class="card rounded-3" data-aos="flip-left" data-aos-duration="500">
+                <img src="img/202410230705-1729667127-(EDIT)HISTORY OF MADURA - ARASKA 2019.jpg" class="rounded-3" alt="">
+                <div class="card-body">
+                  <div class="box-buku">
+                    <div class="text p-1">                     
+                      HISTORY OF MADURA Sejarah, Budaya dan Ajaran Luhur Masyarakat Madura
+                    </div>
+                </div>
+                <div class="isi-buku">
+                    <label class="card-text d-block">Rp 83.000</label>
+                    <label class="card-text d-block">Araska Publisher</label>
+                  </div>
+                </div>
+            </div>
+        </div>
+          <div class="col-md col-lg-2 mb-3">
+            <div class="card rounded-3" data-aos="flip-left" data-aos-duration="500">
+                <img src="img/202410250641-1729838474-KUNCI-KUNCI SURGA - ARASKA 2020.jpg" class="rounded-3" alt="">
+                <div class="card-body">
+                  <div class="box-buku">
+                    <div class="text p-1">                     
+                      Kunci-Kunci Surga Rahasia Dahsyat Amalan dan Doa Calon Penghuni Surga
+                    </div>
+                </div>
+                <div class="isi-buku">
+                    <label class="card-text d-block">Rp 76.5000</label>
+                    <label class="card-text d-block">Araska Publisher</label>
+                  </div>
+                </div>
+            </div>
+        </div>
+          <div class="col-md col-lg-2 mb-3">
+            <div class="card rounded-3" data-aos="flip-left" data-aos-duration="500">
+                <img src="img/202410240805-1729757158-SEJARAH KELAM MAJAPAHIT - ARASKA 2020.jpg" class="rounded-3" alt="">
+                <div class="card-body">
+                  <div class="box-buku">
+                    <div class="text p-1">                     
+                      Sejarah Kelam Majapahit : Jejak-jejak Konflik Kekuasaan dan Tumbal Asmara di Majapahit
+                    </div>
+                </div>
+                <div class="isi-buku">
+                    <label class="card-text d-block">Rp 89.000</label>
+                    <label class="card-text d-block">Araska Publisher</label>
+                  </div>
+                </div>
+            </div>
+        </div>
+          <div class="col-md col-lg-2 mb-3">
+            <div class="card rounded-3" data-aos="flip-left" data-aos-duration="500">
+                <img src="img/202410240209-1729735789-JANGAN BACA BUKU INI JIKA BELUM INGIN TAUBAT - ARASKA 2020.jpg" class="rounded-3" alt="">
+                <div class="card-body">
+                  <div class="box-buku">
+                    <div class="text p-1">                     
+                      Jangan Baca Buku Ini Jika Belum Ingin Taubat : 101 Fakta Maksiat yang Membuatmu Pasti Akan Segera Meninggalkannya
+                    </div>
+                </div>
+                <div class="isi-buku">
+                    <label class="card-text d-block">Rp 76.000</label>
+                    <label class="card-text d-block">Araska Publisher</label>
+                  </div>
+                </div>
+            </div>
+        </div>
+          <div class="col-md col-lg-2 mb-3">
+            <div class="card rounded-3" data-aos="flip-left" data-aos-duration="500">
+                <img src="img/202410230644-1729665859-(EDIT)FITNAH DAJJAL DAN YA’JUJ-MA’JUJ  - ARASKA 2019.jpg" class="rounded-3" alt="">
+                <div class="card-body">
+                  <div class="box-buku">
+                    <div class="text p-1">                     
+                      Fitnah Dajjal dan Ya'juj - Ma'juj Mengungkap Misteri Kemunculan Dajjal dan Ya'juj Ma'juj
+                    </div>
+                </div>
+                <div class="isi-buku">
+                    <label class="card-text d-block">Rp 89.000</label>
+                    <label class="card-text d-block">Araska Publisher</label>
                   </div>
                 </div>
             </div>
